<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ai.prophetizo</groupId>
    <artifactId>morphiq-suite-motivewave</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Morphiq Trading Suite</name>
    <description>Advanced AI-powered trading analysis suite for MotiveWave</description>

    <modules>
        <module>morphiq-core</module>
        <module>morphiq-common</module>
        <module>morphiq-autowave</module>
        <module>morphiq-denoise</module>
        <module>morphiq-bundle-premium</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <junit.jupiter.version>5.13.2</junit.jupiter.version>
        <mockito.version>5.14.2</mockito.version>
        <mwave.sdk.version>20230627</mwave.sdk.version>
        <jwave.version>2.0.0-SNAPSHOT</jwave.version>
        <slf4j.version>2.0.17</slf4j.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.3</maven.surefire.plugin.version>
        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
        <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- MotiveWave SDK -->
            <dependency>
                <groupId>com.motivewave.platform.sdk</groupId>
                <artifactId>mwave_sdk</artifactId>
                <version>${mwave.sdk.version}</version>
                <scope>provided</scope>
            </dependency>
            <!-- VectorWave -->
            <dependency>
                <groupId>ai.prophetizo</groupId>
                <artifactId>vector-wave</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <!-- Minimal Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <!-- Test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Enforce Java version -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.4.1</version>
                    <executions>
                        <execution>
                            <id>enforce-java</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>[21,)</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!-- Compiler plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <!-- Surefire plugin for tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
                <!-- Shade plugin for fat JARs -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.plugin.version}</version>
                    <configuration>
                        <!-- Global shade configuration -->
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                        <!-- Suppress warnings about duplicate classes (expected for fat JARs) -->
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                </excludes>
                            </filter>
                        </filters>
                    </configuration>
                </plugin>
                <!-- Assembly plugin for bundles -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Prophetizo Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/prophetizo/morphiq-suite</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/63189175/packages/maven</url>
        </repository>
                <repository>
            <id>github-prophetizo-vectorwave</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/prophetizo/vectorwave</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>